@@ -42,7 +42,6 @@ tiberium-network-node=Rapidly harvests Tiberium ore over a large area.
 tiberium-node-harvester=Rapidly harvests Tiberium ore directly from a Tiberium node.  Can permanently remove the Tiberium node if it is depleted.
 tiberium-srf-emitter=Generates a directed Sonic Repulsion Field between horizontally or vertically aligned hubs up to 15 tiles apart. Requires 0.5 MW of power to maintain the fields.
 tiberium-spike=A self-powered extractor gathering ore directly from a Tiberium node and refining into molten Tiberium. Prevents the spiked node from growing Tiberium ore.
-tiberium-ion-turret=A powerful turret that emits an ionically charged particle beam.
 tiberium-ion-core=A device for generating the ion streams for ion weapons.
 tiberium-blue-explosives=A form of Tiberium safe enough to handle, but explosive under the right conditions.
 tiberium-rounds-magazine=A magazine of Tiberium infused bullets.
@@ -87,7 +86,6 @@ tiberium-sonic-emitter=Anti-Tiberium Sonic Emitter
 tiberium-sonic-emitter-blue=Anti-Blue Tiberium Sonic Emitter
 tiberium-spike=Tiberium Spike
 tiberium-detonation-charge=Tiberium Detonation Charge
-tiberium-ion-turret=Ion Beam Projector
 tiberium-growth-accelerator-node=Growth Accelerator
 tiberium-centrifuge-0=Tiberium Centrifuge 0
 tiberium-centrifuge-1=Tiberium Centrifuge 1
@@ -111,7 +109,6 @@ tiberium-sonic-emitter=A sonic cannon that uses resonant frequencies to shatter 
 tiberium-sonic-emitter-blue=A sonic cannon that uses resonant frequencies to shatter only nearby Blue Tiberium Ore. Does not attack biters.
 tiberium-spike=A self-contained and self-powered extractor of molten Tiberium, refining on site and preventing additional growth.
 tiberium-detonation-charge=Place this explosive on a Tiberium Blossom Tree and detonate it using a projectile weapon to permanently destroy the vein and stop future Tiberium growth.
-tiberium-ion-turret=A powerful turret that emits an ionically charged particle beam.
 tiberium-growth-accelerator=Slowly consumes Tiberium Substrate to accelerate Tiberium growth from the Tiberium node it is placed on.
 tiberium-growth-accelerator-node=Slowly consumes Tiberium Substrate to accelerate Tiberium growth from the Tiberium node it is placed on.
 tiberium-reprocessor=A facility designed to recycle unused ores into Tiberium Substrate. Works at the same ratio as the Chemical Plant recipes, but can all ores at a single facility.
@@ -399,9 +396,9 @@ menu_weaponry=Tiberium Weaponry
 title_weaponry=Tiberium Weaponry
 weaponry=The mod has several weapons based on tiberium technology. Since tiberium is explosive, it sees use in missiles, and with the ability to ionize easily, it is perfect for ion particle beams.
 
-menu_ion_projector=[item=tiberium-ion-turret]Ion Beam Projector
-title_ion_projector=Ion Beam Projector
-ion_projector=Tiberium is effective at ionizing particles for use in ion particle beams. This is used to make a more effective laser turret, essentially.
+menu_ion_projector=[item=tiberium-obelisk-of-light]Obelisk of Light
+title_ion_projector=Obelisk of Light
+ion_projector=This high-power laser effectively destroys troops and armament at long range. It is the most powerful on-board weapon in the game. Its slow recharge time means that it cannot be the only weapon defending your base, however. Make sure you have excess power before building these, because damage to your power plants will keep the obelisks off-line.
 
 menu_tiberium_missiles=[item=tiberium-rocket]Tiberium Missile Weapons
 title_tiberium_missiles=Tiberium Missile Weapons
