@@ -1,328 +1,4 @@
 data:extend{
-	--Old power plant kept around for legacy reasons
-	{
-		type = "generator",
-		name = "tiberium-plant",
-		icon = "__base__/graphics/icons/chemical-plant.png",
-		icon_size = 64,
-		flags = {"placeable-neutral","placeable-player", "player-creation"},
-		minable = {mining_time = 0.1, result = "tiberium-power-plant"},
-		max_health = 300,
-		corpse = "medium-remnants",
-		dying_explosion = "medium-explosion",
-		max_power_output = (100 / 60) .. "MJ",
-		effectivity = 2,
-		fluid_usage_per_tick = 2 / 60,
-		maximum_temperature = 1000, --not needed...
-		burns_fluid = true,
-		scale_fluid_usage = true,
-		collision_box = {{-1.2, -1.2}, {1.2, 1.2}},
-		selection_box = {{-1.5, -1.5}, {1.5, 1.5}},
-		drawing_box = {{-1.5, -1.9}, {1.5, 1.5}},
-		energy_source = {
-				type = "electric",
-				usage_priority = "secondary-output",
-			emissions_per_minute = 125 * common.scalePollution(4),
-		},
-		horizontal_animation = {
-			filename = "__base__/graphics/entity/chemical-plant/chemical-plant.png",
-			width = 108,
-			height = 148,
-			frame_count = 24,
-			line_length = 12,
-			shift = util.by_pixel(1, -9),
-			hr_version = {
-				filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant.png",
-				width = 220,
-				height = 292,
-				frame_count = 24,
-				line_length = 12,
-				shift = util.by_pixel(0.5, -9),
-				scale = 0.5
-			}
-		},
-		vertical_animation = {
-			filename = "__base__/graphics/entity/chemical-plant/chemical-plant.png",
-			width = 108,
-			height = 148,
-			frame_count = 24,
-			line_length = 12,
-			shift = util.by_pixel(1, -9),
-			hr_version = {
-				filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant.png",
-				width = 220,
-				height = 292,
-				frame_count = 24,
-				line_length = 12,
-				shift = util.by_pixel(0.5, -9),
-				scale = 0.5
-			}
-		},
-		animation = make_4way_animation_from_spritesheet({layers = {
-			{
-				filename = "__base__/graphics/entity/chemical-plant/chemical-plant.png",
-				width = 108,
-				height = 148,
-				frame_count = 24,
-				line_length = 12,
-				shift = util.by_pixel(1, -9),
-				hr_version = {
-					filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant.png",
-					width = 220,
-					height = 292,
-					frame_count = 24,
-					line_length = 12,
-					shift = util.by_pixel(0.5, -9),
-					scale = 0.5
-				}
-			},
-			{
-				filename = "__base__/graphics/entity/chemical-plant/chemical-plant-shadow.png",
-				width = 154,
-				height = 112,
-				repeat_count = 24,
-				frame_count = 1,
-				shift = util.by_pixel(28, 6),
-				draw_as_shadow = true,
-				hr_version = {
-					filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-shadow.png",
-					width = 312,
-					height = 222,
-					repeat_count = 24,
-					frame_count = 1,
-					shift = util.by_pixel(27, 6),
-					draw_as_shadow = true,
-					scale = 0.5
-				}
-			}
-		}}),
-		working_visualisations = {
-			{
-				apply_recipe_tint = "primary",
-				north_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-liquid-north.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 32,
-					height = 24,
-					shift = util.by_pixel(24, 14),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-liquid-north.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 66,
-						height = 44,
-						shift = util.by_pixel(23, 15),
-						scale = 0.5
-					}
-				},
-				east_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-liquid-east.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 36,
-					height = 18,
-					shift = util.by_pixel(0, 22),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-liquid-east.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 70,
-						height = 36,
-						shift = util.by_pixel(0, 22),
-						scale = 0.5
-					}
-				},
-				south_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-liquid-south.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 34,
-					height = 24,
-					shift = util.by_pixel(0, 16),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-liquid-south.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 66,
-						height = 42,
-						shift = util.by_pixel(0, 17),
-						scale = 0.5
-					}
-				},
-				west_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-liquid-west.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 38,
-					height = 20,
-					shift = util.by_pixel(-10, 12),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-liquid-west.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 74,
-						height = 36,
-						shift = util.by_pixel(-10, 13),
-						scale = 0.5
-					}
-				}
-			},
-			{
-				apply_recipe_tint = "secondary",
-				north_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-foam-north.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 32,
-					height = 22,
-					shift = util.by_pixel(24, 14),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-foam-north.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 62,
-						height = 42,
-						shift = util.by_pixel(24, 15),
-						scale = 0.5
-					}
-				},
-				east_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-foam-east.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 34,
-					height = 18,
-					shift = util.by_pixel(0, 22),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-foam-east.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 68,
-						height = 36,
-						shift = util.by_pixel(0, 22),
-						scale = 0.5
-					}
-				},
-				south_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-foam-south.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 32,
-					height = 18,
-					shift = util.by_pixel(0, 18),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-foam-south.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 60,
-						height = 40,
-						shift = util.by_pixel(1, 17),
-						scale = 0.5
-					}
-				},
-				west_animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-foam-west.png",
-					frame_count = 24,
-					line_length = 6,
-					width = 36,
-					height = 16,
-					shift = util.by_pixel(-10, 14),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-foam-west.png",
-						frame_count = 24,
-						line_length = 6,
-						width = 68,
-						height = 28,
-						shift = util.by_pixel(-9, 15),
-						scale = 0.5
-					}
-				}
-			},
-			{
-				apply_recipe_tint = "tertiary",
-				fadeout = true,
-				constant_speed = true,
-				north_position = util.by_pixel_hr(-30, -161),
-				east_position = util.by_pixel_hr(29, -150),
-				south_position = util.by_pixel_hr(12, -134),
-				west_position = util.by_pixel_hr(-32, -130),
-				animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-smoke-outer.png",
-					frame_count = 47,
-					line_length = 16,
-					width = 46,
-					height = 94,
-					animation_speed = 0.5,
-					shift = util.by_pixel(-2, -40),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-smoke-outer.png",
-						frame_count = 47,
-						line_length = 16,
-						width = 90,
-						height = 188,
-						animation_speed = 0.5,
-						shift = util.by_pixel(-2, -40),
-						scale = 0.5
-					}
-				}
-			},
-			{
-				apply_recipe_tint = "quaternary",
-				fadeout = true,
-				constant_speed = true,
-				north_position = util.by_pixel_hr(-30, -161),
-				east_position = util.by_pixel_hr(29, -150),
-				south_position = util.by_pixel_hr(12, -134),
-				west_position = util.by_pixel_hr(-32, -130),
-				animation = {
-					filename = "__base__/graphics/entity/chemical-plant/chemical-plant-smoke-inner.png",
-					frame_count = 47,
-					line_length = 16,
-					width = 20,
-					height = 42,
-					animation_speed = 0.5,
-					shift = util.by_pixel(0, -14),
-					hr_version = {
-						filename = "__base__/graphics/entity/chemical-plant/hr-chemical-plant-smoke-inner.png",
-						frame_count = 47,
-						line_length = 16,
-						width = 40,
-						height = 84,
-						animation_speed = 0.5,
-						shift = util.by_pixel(0, -14),
-						scale = 0.5
-					}
-				}
-			}
-		},
-		vehicle_impact_sound =	{filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65},
-		working_sound = {
-			sound = {
-				{
-					filename = "__base__/sound/chemical-plant.ogg",
-					volume = 0.8
-				}
-			},
-			idle_sound = {filename = "__base__/sound/idle1.ogg", volume = 0.6},
-			apparent_volume = 1.5
-		},
-		fluid_box = {
-			base_area = 1.5,
-			base_level = -1.5,
-			height = 3,
-			pipe_connections = {
-				{type = "input-output", position = {-1, -2}},
-				{type = "input-output", position = {1, -2}},
-				{type = "input-output", position = {-1, 2}},
-				{type = "input-output", position = {1, 2}},
-			},
-			filter = "liquid-tiberium",
-			production_type = "input-output",
-			pipe_covers = pipecoverspictures(),
-		},
-	},
-	--New, larger power plant
 	{
 		type = "generator",
 		name = "tiberium-power-plant",
